# mcp_arena

./: AGENT_GUIDE.md  MCP_SERVERS_GUIDE.md  README.md  TOOLS_GUIDE.md  pyproject.toml  tutorial.md  verify_cli.py  verify_mcp.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
mcp_arena/: __init__.py  cli.py
mcp_arena/agent/: tools.py
mcp_arena/examples/: agent_examples.py  custom_greeting_server.py
mcp_arena/tools/: agent_tool.py  calculator.py  data_analysis.py  filesystem.py  search.py  time_tool.py  web.py
mcp_arena/wrapper/: agent_wrapper.py
tests/: test_cli.py
