[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "mcp_arena"
version = "0.2.3"
description = "An opinionated Python library for building MCP (Model Context Protocol) servers with presets, agents, and tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Satyam Singh", email = "satyamsingh7734@gmail.com" }
]

keywords = ["mcp", "model-context-protocol", "agents", "ai", "llm"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

# ------------------------
# Core dependencies (SAFE)
# ------------------------
dependencies = [
    "mcp>=1.25,<2.0",
    "python-dotenv>=1.0,<2.0",
    "typing-extensions>=4.8,<5.0",
    "psutil>=7.2,<8.0",
    "pygithub>=2.8,<3.0",
    "sentence-transformers>=5.2,<6.0",
    "chromadb>=1.3.5,<2.0",
    # LangChain stack (aligned)
    "langchain>=1.2,<2.0",
    "langchain-core>=1.2,<2.0",
    "langchain-community>=0.4,<1.0",
    "langchain-huggingface>=1.2,<2.0",
    "langchain-openai>=1.1,<2.0",
    "langchain-chroma>=1.1,<2.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    # Communication services
    "google-auth>=2.29,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-auth-httplib2>=0.1.0,<1.0",
    "google-api-python-client>=2.130,<3.0",
    "msal>=1.28,<2.0",
    "requests>=2.31,<3.0",
    "slack-sdk>=3.27,<4.0",
    "twilio>=9.0,<10.0",
    "langchain-groq>=1.1.1",
    "notion-client>=2.7.0",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.5",
    "boto3>=1.42.15",
    "pyautogui>=0.9.54",
    "redis>=7.1.0",
    "docker>=7.1.0",
    "python-gitlab>=7.0.0",
    "atlassian-python-api>=4.0.7",
    "html2text>=2025.4.15",
    "langchain-mcp-adapters>=0.2.1",
]

[project.optional-dependencies]

# Communication service groups
gmail = [
    "google-auth>=2.29,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "google-auth-httplib2>=0.1.0,<1.0",
    "google-api-python-client>=2.130,<3.0"
]

outlook = [
    "msal>=1.28,<2.0"
]

slack = [
    "slack-sdk>=3.27,<4.0"
]

whatsapp = [
    "twilio>=9.0,<10.0"
]

# Email services group
email = [
    "mcp_arena[gmail,outlook]"
]

# Messaging services group
messaging = [
    "mcp_arena[slack,whatsapp]"
]

# Communication services group (all)
communication = [
    "mcp_arena[gmail,outlook,slack,whatsapp]"
]

agents = [
    "langchain-groq>=1.0,<2.0",
    "langchain-mcp-adapters>=0.1,<1.0",
    "langchain-agent>=0.1,<1.0"
]

vectordb = [
    "chromadb>=1.3.5,<2.0",
    "sentence-transformers>=5.2,<6.0"
]

github = ["PyGithub>=2.8,<3.0"]
gitlab = ["python-gitlab>=7.0,<8.0"]
bitbucket = ["atlassian-python-api>=4.0,<5.0"]

postgres = ["psycopg2-binary>=2.9,<3.0"]
mongodb = ["pymongo>=4.6,<5.0"]
redis = ["redis>=5.0,<8.0"]

docker = ["docker>=7.1,<8.0"]
kubernetes = ["kubernetes>=28.1,<35.0"]

local_operation = [
    "psutil>=7.2,<8.0",
    "pyautogui>=0.9,<1.0"
]

dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "black>=24.0,<26.0",
    "isort>=5.12,<6.0",
    "ruff>=0.12,<1.0",
    "mypy>=1.7,<2.0",
    "pre-commit>=3.5,<4.0"
]

all = [
    "mcp_arena[agents,vectordb,github,gitlab,bitbucket,postgres,mongodb,redis,docker,kubernetes,local_operation,communication]"
]

complete = [
    "mcp_arena[all,dev]"
]

# ------------------------
# CLI Entry Point
# ------------------------
[project.scripts]
mcp_arena = "mcp_arena.cli:app"
mcp-arena = "mcp_arena.cli:app"

# ------------------------
# URLs
# ------------------------
[project.urls]
Homepage = "https://github.com/SatyamSingh8306/mcp_arena"
Repository = "https://github.com/SatyamSingh8306/mcp_arena"
Issues = "https://github.com/SatyamSingh8306/mcp_arena/issues"

# ------------------------
# Hatch
# ------------------------
[tool.hatch.build.targets.wheel]
packages = ["mcp_arena"]

# ------------------------
# Tooling
# ------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
